# mlops-platform-for-aws

./: README.md
infra/: Pulumi.iac.yaml  Pulumi.yaml  S3ServiceAccount.ts  index.ts  package-lock.json  package.json
simple_model_demo/: Dockerfile  Makefile  README.rst  pyproject.toml
simple_model_demo/infra/: Pulumi.model_demo_dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
simple_model_demo/src/simple_model_demo/serving/: serve.py  test_data.json
simple_model_demo/src/simple_model_demo/training/: train.py
simple_model_demo/tests/: test_simple_model_demo.py
